--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -3,18 +3,19 @@ name: Admin Update
 on:
   # Déclenchement manuel
   workflow_dispatch:
-  # Cron chaque premier du mois à 9h UTC
+  # Cron chaque premier du mois à 4h UTC
   schedule:
     - cron: '0 4 1 * *'
 
 jobs:
-  admin-update:
+  ci-admin:
     name: Execute CI Admin Scripts
     runs-on: ubuntu-latest
-    # Exécuter seulement sur main/master pour les scheduled runs
-    if:
+    # Exécuter seulement sur main/master pour les scheduled runs et si NPM_TOKEN est défini
+    if: |
       github.event_name != 'schedule' || github.ref == 'refs/heads/main' ||
       github.ref == 'refs/heads/master'
+
     outputs:
       changes-detected: ${{ steps.check-changes.outputs.changes }}
 
@@ -48,20 +49,20 @@ jobs:
   bump-version:
     name: Bump Package Version
     runs-on: ubuntu-latest
-    needs: admin-update
-    if: needs.admin-update.outputs.changes-detected == 'true'
+    needs: [ci-admin]
+    if: needs.ci-admin.outputs.changes-detected == 'true'
     outputs:
       newTag: ${{ steps.bump-version.outputs.newTag }}
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Download workspace
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: updated-workspace
           path: .
@@ -83,7 +84,7 @@ jobs:
           skip-push: 'true'
 
       - name: Upload updated workspace with version
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: updated-workspace-with-version
           path: |
@@ -95,18 +96,18 @@ jobs:
   commit-changes:
     name: Commit Changes
     runs-on: ubuntu-latest
-    needs: [admin-update, bump-version]
-    if: needs.admin-update.outputs.changes-detected == 'true'
+    needs: [ci-admin, bump-version]
+    if: needs.ci-admin.outputs.changes-detected == 'true'
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Download workspace with version
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: updated-workspace-with-version
           path: .
@@ -128,7 +129,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload workspace
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: ready-workspace
           path: |
@@ -140,15 +141,15 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    needs: [commit-changes, admin-update]
-    if: needs.admin-update.outputs.changes-detected == 'true'
+    needs: [commit-changes, ci-admin]
+    if: needs.ci-admin.outputs.changes-detected == 'true'
 
     steps:
       - name: Checkout pnpm repo
         uses: chlbri/pnpmi-action@main
 
       - name: Download workspace with version
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: ready-workspace
           path: .
@@ -165,8 +166,8 @@ jobs:
   cleanup:
     name: Cleanup Artifacts
     runs-on: ubuntu-latest
-    needs: [admin-update, bump-version, commit-changes, publish]
-    if: needs.admin-update.outputs.changes-detected == 'true'
+    needs: [ci-admin, bump-version, commit-changes, publish]
+    if: needs.ci-admin.outputs.changes-detected == 'true'
     permissions:
       actions: write
       contents: read
